--- a/about.css
+++ b/about.css
@@ -1,11 +1,6 @@
 
 
 
-
-
-
-
-
 #current{
     color:red;
     border-bottom: 1px solid;
@@ -14,60 +9,12 @@
 
 
 
-
-.containerr{
-    width:1000px;
-    margin:auto;
-    overflow: hidden;
-}
-
-
-
  /*RWD*/
 
-  .containerr{
+ .containerr{
     width: 1000px;
     margin:auto;
 }
-
-@media(max-width:600px) and (orientation:landscape){
-    .containerr {
-        width:100%; 
-        margin:auto;
-    }
-}
-
-@media(max-width:600px) and (orientation:portrait){
-    .containerr{
-        width:100%; 
-        margin:auto;
-    }
-}
-
-@media(min-width:601px) and (max-width:768px){
-    .containerr {
-        width:100%; 
-        margin:auto;
-    }
-}
-
-
-header{
-    /* background-color: #35424a;  */
-    padding-top:5px;
-    padding-bottom: 30px;; 
-     min-height:70px;
-    border-bottom:blue 2px solid; 
-}
-
-
-
-header .containerr .logo img{
-    width:100px;
-    border:blue 3px solid;
-}
-
-
 
 
 
@@ -78,18 +25,17 @@ header .containerr .logo img{
 .about-us{
     min-height:400px;
     background-color: #e6e6e6;
-    background-size: cover;
-    background-repeat: no-repeat;
     padding-top:10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 
 
 .about-us h3{
-        
+ text-transform: uppercase;       
 margin-left: 20px;
 padding: 20px;
+margin-top: 5%;
 
 }
 
@@ -97,31 +43,31 @@ padding: 20px;
     /* text-transform: uppercase; */
         margin-top:5px ;
         margin-bottom: 10px;
-        font-weight:bold;
-        margin-left:40px;
-        font-size:15px;
-        margin-left:20px;
-        padding: 20px;
+        font-weight:200px;
+        font-size:18px;
+        margin-left:1%;
+        padding: 10px;
+        width: 70%;
 }
 
-.branding{
-    background:#35424a;
+/* .branding{ */
+    /* background:#35424a;
     color:#e6e6e6;
     width:50%;
     font-weight: 500px;
     padding-top:10px;
     padding-bottom: 10%;
-}
+} */
 
 
 
 
 
-.about-us img{
+    .about-us img{
     width:300px;
-    margin-left:70%;
-    margin-top:-10px;
-}
+    margin-left:12%;
+    margin-top:1%;
+    }
 
 
 
@@ -140,12 +86,10 @@ padding: 20px;
 
 .contact{
     
-    min-height: 400px;
+    min-height: 200px;
     background-color:rgba(0,0,0,0.2);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-top:20px;
-    padding-bottom: 20px;
+    padding-top:10px;
+    padding-bottom: 10px;
     
 
 }
@@ -165,27 +109,18 @@ padding: 10px;
     font-size: 15px;
     font-weight: 300px;
     padding: 10px;
+    margin-top: 20px;
         
 }
 
 
 
-.branding{
+/* .branding{
 margin-left: 100px;
 padding-top: 10px;
 padding-bottom: 10px;
 margin-top: 40px;
-}
-
-
-
-
-
-
-
-
-
-
+} */
 
 
 
@@ -200,4 +135,87 @@ footer  {
    }
 
 
+
+
+
+
+
+
+
+
+   @media(max-width:600px) and (orientation:landscape){
+    .containerr {
+        width:80%; 
+        margin:auto;
+    }
+}
+
+@media(max-width:600px) and (orientation:portrait){
+    .containerr{
+        width:80%; 
+        margin:auto;
+    }
+
+
+    .about-us h3{
+        text-align: center;
+        text-transform: uppercase;       
+       margin-left: 20px;
+       padding: 20px;
+       margin-top: 20%;
+       
+       }
+
+
+
+       .about-us p{
+        /* text-transform: uppercase; */
+            margin-top:-10px ;
+            margin-bottom: 10px;
+            font-weight:200px;
+            font-size:18px;
+            margin-left:1%;
+            padding: 10px;
+            width: 100%;
+    }
+
+
+
+    .about-us img{
+        width:300px;
+        margin-left:10%;
+        margin-top:1%;
+        }
+
+
+
+
+        .contact h3{
+            text-align: center;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 20px;
+            padding: 10px; 
+            
+            }
+            
+    
+       
+    
+
+
+
+
+
+
+
+
+}
+
+@media(min-width:601px) and (max-width:768px){
+    .containerr {
+        width:80%; 
+        margin:auto;
+    }
+}
 
