--- a/acctOpening.css
+++ b/acctOpening.css
@@ -1,10 +1,6 @@
-
-
-
-
-
-        
-        
+        body{
+            background:rgba(0,0,0,0.3);
+        }        
         
         #current{
 
@@ -16,7 +12,7 @@
         
         
         
-        .containerr{
+        .container-form{
             width:1000px;
             margin:auto;
             overflow: hidden;
@@ -24,36 +20,7 @@
         
         
         
-         /*RWD*/
-        
-          .containerr{
-            width: 1000px;
-            margin:auto;
-        }
-        
-        @media(max-width:600px) and (orientation:landscape){
-            .containerr {
-                width:100%; 
-                margin:auto;
-            }
-        }
-        
-        @media(max-width:600px) and (orientation:portrait){
-            .containerr{
-                width:100%; 
-                margin:auto;
-            }
-        }
-        
-        @media(min-width:601px) and (max-width:768px){
-            .containerr {
-                width:100%; 
-                margin:auto;
-            }
-        }
-        
-        
-        header{
+         header{
              background-color: #35424a; 
             padding-top:30px;
             padding-bottom: 30px;; 
@@ -67,7 +34,7 @@
             width:100px;
             border:blue 3px solid;
         }
-        
+         
         
         
         
@@ -84,7 +51,8 @@
             background:rgba(0,0,0,0.3);
             background-position: center; 
             background-size:cover;
-            background-repeat:no-repeat; 
+            background-repeat:no-repeat;
+             
             
         } 
         
@@ -101,6 +69,7 @@
         
         
         .container-form p{
+            /* text-align: center; */
             font-size :18px;
             color:whitesmoke;
             margin-top: 10px;
@@ -145,4 +114,58 @@
         
         
         
+
+
+
+
+                   
+        
+         /*RWD*/
+        
+          /* .container-form{
+            width: 1000px;
+            margin:auto;
+        } */
+        
+        @media(max-width:600px) and (orientation:landscape){
+            .container-form {
+                width:80%; 
+                margin:auto;
+            }
+        }
+        
+        @media(max-width:600px) and (orientation:portrait){
+            .container-form{
+                width:80%; 
+                margin:auto;
+            }
+
+
+
+
+            form{
+                margin-left: 45%;
+                /* border: 1px solid red;
+                width:14.2%; */
+                margin-top: -40px;
+                margin-left: 70px;
+            }
+
+
+
+           
+
+
+
+
+
+        }
+        
+        @media(min-width:601px) and (max-width:768px){
+            .container-form {
+                width:80%; 
+                margin:auto;
+            }
+        }
+
         
