--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,14 @@
 
 
+ 
 
 
 
 
 
+body{
+    background-color: #e6e6e6;;
+}
 
 
 
@@ -19,76 +23,10 @@
 
 
 .containerr{
-    width:100%;
+    width:1000px;
     margin:auto;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
-
-
-
- /*RWD*/
-
- .containerr{
-    width: 1000px;
-    margin:auto;
-}
-
-@media(max-width:600px) and (orientation:landscape){
-    .containerr {
-        width:100%; 
-        margin:auto;
-    }
-}
-
-@media(max-width:600px) and (orientation:portrait){
-    .containerr{
-        width:100%; 
-        margin:auto;
-    }
-}
-
-@media(min-width:601px) and (max-width:768px){
-    .containerr {
-        width:100%; 
-        margin:auto;
-    }
-}
-
-
-
-
-
-
-
-
-
-header{
-    /* background-color: #35424a; */
-    padding-top:30px;
-    padding-bottom: 30px;; 
-     min-height:70px;
-    border-bottom:blue 2px solid; 
-}
-
-
-
-header .container .logo img{
-    width:100px;
-    border:blue 3px solid;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -101,10 +39,8 @@ header .container .logo img{
     
         min-height: 400px;
         background-color: #e6e6e6;
-        background-size: cover;
-        background-repeat: no-repeat;
-        padding-top:20px;
-        padding-bottom: 20px;
+        /* padding-top:10px; */
+        padding-bottom: 10px;
         
     
  }
@@ -114,34 +50,46 @@ header .container .logo img{
     text-transform: uppercase;
     font-weight: bold;
     font-size: 20px;
+    margin-top: 10%;
+    text-align: center;
+
+    
 
 }
 
 
 .contact p{
 
-        font-size: 15px;
-        font-weight: 300px;
+        font-size: 18px;
+        font-weight: 200px;
+        margin-top: 5%;
             
 }
 
 
 
-.branding{
+.image img{
+    width:200px;
+    /* height: 20%; */
+    margin-bottom: 20px;
+}
+
+
+/* .branding{
     margin-left: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 40px;
-}
+} */
 
 
 
-.branding img{
+/* .branding img{
     width:200px;
     float:right;
     margin-top: -15.5%;
 }
-
+ */
 
 
 
@@ -156,6 +104,81 @@ footer  {
     font-weight:bold;
     
    }
+
+
+
+
+
+
+
+
+
+
+
+
+   
+ /*RWD*/
+
+ /* .containerr{
+    width: 80px;
+    margin:auto;
+} */
+
+@media(max-width:600px) and (orientation:landscape){
+    .containerr {
+        width:80%; 
+        margin:auto;
+    }
+}
+
+@media(max-width:600px) and (orientation:portrait){
+    .containerr{
+        width:80%; 
+        margin:auto;
+    }
+
+
+    .contact h3{
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 20px;
+        margin-top: 40%;
+        text-align: center;
+    
+        
+    
+    }
+
+
+
+
+
+    .image img{
+        width:200px;
+        /* height: 20%; */
+        margin-bottom: 20px;
+        margin-top: -40%;
+    }
+    
+    
+
+
+
+
+
+
+}
+
+@media(min-width:601px) and (max-width:768px){
+    .containerr {
+        width:80%; 
+        margin:auto;
+    }
+}
+
+
+
+
 
 
 
